--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
               <div class="modal-body">
                 Add the caption of your post here
                 <div class="form-group mb-3">
-                  <input type="email" class="form-control" placeholder="Email Address" />
+                  <input type="email" class="form-control" placeholder="" />
                 </div>
               </div>
-              <div class="modal-footer d-flex justify-content-between">
+              <div class="modal-footer d-flex justify-content-between bg-light">
                 <div>
-                  <i class="fa-solid fa-camera"></i>
+                  <i class="fa-solid fa-camera p-2 bg-secondary" ></i>
 
-                  <i class="fa-solid fa-location-dot"></i>
+                  <i class="fa-solid fa-location-dot p-2 bg-secondary"></i>
                 </div>
                 <div>
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -62,9 +62,12 @@
             <i class="fa-solid fa-gear" class="img-fluid"></i>
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Menu item</a></li>
-            <li><a class="dropdown-item" href="#">Menu item</a></li>
-            <li><a class="dropdown-item" href="#">Menu item</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="#">Accebility</a></li>
+            <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
+            <div class="d-flex ms-3">
+              <button type="button " class="btn" disabled data-bs-toggle ="button">Log out</button>
+          </div>
           </ul>
         </div>
 
